src/main.css
/* ... */
.pane-title {
	margin-top: 0;
	text-transform: lowercase;
	font-size: 1.9em;
	font-weight: 100;
	font-family: Raleway;
	letter-spacing: 2px;
	margin-bottom: 1em;
}

#pane-contact .pane-title {
	margin-bottom: 1.5em;
}

#pane-home {
	background: white;
	color: #060606;
	height: calc(1vh * 100 - 50px);
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	padding: 0;
	width: 100%;
	max-width: none;
	text-align: center;
}

#pane-about {
	height: 200px;
}

#pane-contact {
	min-height: calc(100vh - 2em);
}

.intro-prefix {
	margin-bottom: 1em;
	animation-name: present-in;
	animation-duration: 8s;
	animation-timing-function: cubic-bezier(0.21, 1.02, 0.36, 1.01);
	animation-fill-mode: both;
	font-family: Dosis;
	font-size: 5.3vw;
}

.intro-title {
	text-transform: uppercase;
	animation-name: present-in-title;
	animation-duration: 3s;
	animation-timing-function: ease-out;
	animation-delay: 2s;
	animation-fill-mode: both;
	font-family: Raleway,sans-serif;
	font-weight: 200;
	font-size: 11.4vw;
	margin-bottom: 2em;
}

@media screen and (min-width: 600px) {
	.intro-prefix {
		font-size: 1.5vw;
	}
	.intro-title {
		font-size: 7.4vw;
	}
}

.members {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	background: #303030;
	border-radius: 8px;
	box-shadow: inset 0 0 5px 1px rgba(0,0,0,0.34), inset 0 0 7px 2px rgba(0,0,0,0.12), inset 0 0 3px 0px rgba(0,0,0,0.3);
}

@keyframes card-present {
	from {
		opacity: 0;
		transform: translateY(10px);
	}
	to {
		opacity: 1;
		transform: none;
	}
}

.member-card {
	display: flex;
	margin: 1em;
    width: calc(100% - 2em);
    border-radius: 8px;
	overflow: hidden;
	flex-shrink: 0;
	flex-direction: column;
	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2), 0 0 21px -2px rgba(0,0,0,0.3);
	animation: card-present;
	animation-duration: 1.5s;
	animation-timing-function: ease-out;
	animation-fill-mode: backwards;
	transition: all .5s cubic-bezier(0.03, 0.41, 0.18, 0.97);
}

@media screen and (min-width: 420px) {
	.member-card {
		width: 320px;
	}
}

.member-card:nth-child(2) {
	animation-delay: .2s;
}

.member-card:nth-child(3) {
	animation-delay: .4s;
}

.member-card:hover {
	transform: translateY(-5px);
	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2), 0 0 21px -2px rgba(0,0,0,0.3);
}

.member-headshot {
	height: 240px;
	background: white;
	background-repeat: no-repeat;
	transition: all .5s cubic-bezier(0.03, 0.41, 0.18, 0.97);
	background-color: rgba(0,0,0,0); /* Fix for Chrome bug where the background image doesn't get properly cropped by the rounded border */
}

.masha .member-headshot {
	background-image: url(images/masha.jpg);
	background-position: left -70px top -40px;
	background-size: 510px;
}

.gus .member-headshot {
	background-image: url(images/gus.jpg);
	background-position: center top;
	background-size: 570px;
}

.isabel .member-headshot {
	background-image: url(images/isabel.jpg);
	background-position: center top -21px;
	background-size: 390px;
}

.diego .member-headshot {
	background-image: url(images/diego.jpg);
	background-position: left top -21px;
	background-size: 390px;
}

.member-bio {
	padding: .9em;
	background: #424242;
	color: #e2e2e2;
	flex: auto;
	position: relative;
	padding-bottom: 4em;
}

.member-name {
	font-size: 1.4em;
}

.member-desc {
	margin-top: 1em;
    font-size: 0.9em;
	line-height: 1em;
}

.member-links {
	font-style: normal;
	position: absolute;
	bottom: 0;
	left: 0;
	right: 0;
	margin-left: .9em;
	margin-bottom: .9em;
	margin-right: .9em;
}

.member-links .social {
	float: right;
}

.member-links img {
	height: 20px;
	width: 20px;
}

.member-links img.web {
	vertical-align: middle;
	margin-right: .4em;
}

.member-links .social img {
	margin-right: .7em;
}

.member-links .social:first-child img {
	margin-right: 0;
}

img.vimeo {
	border-radius: 3px;
}

.member-secondary-list {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	margin-top: 2em;
	margin-bottom: 1em;
	width: 100%;
	max-width: 900px;
}

.member-secondary {
	margin-bottom: 0.6em;
	padding: 0.8em 1.4em;
	text-align: center;
	font-size: .9em;
}

@media screen and (min-width: 420px) {
	.member-secondary {
		min-width: 280px;
		width: calc(50% - 2.8em);
	}
}

.member-secondary-name {
	font-weight: bold;
}

.video-container {
	text-align: center;
}

.floating-section-header {
	z-index: 1;
	position: fixed;
	top: 0;
	left: 0;
	color: white;
	display: none;
}

@media screen and (min-width: 660px) {
	.floating-section-header {
		display: block;
	}
}

.navbar-underline {
	background: #9e9e9e;
	position: absolute;
	height: 1px;
	bottom: 9px;
	transition: all .2s ease-out;
}

.social-buttons {
	position: absolute;
	right: 0;
	top: 0;
	height: 100%;
	align-items: center;
	padding-right: 1em;
	display: none;
}

@media screen and (min-width: 660px) {
	.social-buttons {
		display: flex;
	}
}

.social-link {
	margin-right: .6em;
	transition: opacity .5s ease-out;
}

.social-link:last-child {
	margin-right: 0;
}

.social-link > img {
	height: 26px;
	filter: brightness(50%);
	transition: all .2s cubic-bezier(0.21, 1.02, 0.36, 1.01);
	border-radius: 2px;
	padding: 3px 0;
}

.social-link > img:hover {
	filter: brightness(80%);
}

.social-link.indiegogo {
	opacity: 0;
	pointer-events: none;
}

.navbar-fixed .social-link.indiegogo {
	opacity: 1;
	pointer-events: unset;
}

.social-link.indiegogo > img {
	background: #ff4099;
	height: 20px;
	padding: 3px 4px;
}

.trailer-video {
	height: 158px;
	width: 280px;
}

@media screen and (min-width: 600px) {
	.trailer-video {
		height: 315px;
		width: 560px;
	}
}

.material-button {
	font-weight: bold;
	font-family: "Roboto";
	cursor: pointer;
	outline: none;
	transition: all .3s ease-out;
	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);
	text-transform: uppercase;
	border: none;
	border-radius: 14px;
}
/* ... */

